fix spacing of BookByFriend at approx 1030px (see william-penn)

--- a/src/components/pages/friend/BookByFriend.css
+++ b/src/components/pages/friend/BookByFriend.css
@@ -1,21 +1,20 @@
-.BookByFriend .Cover--scope-1-3 {
-  display: none;
+@screen lg {
+  .BookByFriend--not-alone {
+    max-width: calc(50% - 70px);
+  }
+  .BookByFriend--main > * {
+    margin-right: 5%;
+  }
 }
 
-@screen lg {
-  .BookByFriend--not-alone .Cover--scope-1-2 {
-    display: none;
-  }
-  .BookByFriend--not-alone .Cover--scope-1-3 {
-    display: block;
-  }
-  .BookByFriend--not-alone {
-    width: calc(50% - 70px);
+@media (min-width: 1080px) {
+  .BookByFriend--main > * {
+    margin-right: 0;
   }
 }
 
 @screen xl {
   .BookByFriend--not-alone {
-    width: calc(50% - 130px);
+    max-width: calc(50% - 130px);
   }
 }
